[gd_scene load_steps=24 format=2]

[ext_resource path="res://kod/Alistirma(KelimeBilme).gd" type="Script" id=1]
[ext_resource path="res://font/Crickhollow Demo.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resim/screenshot (1).png" type="Texture" id=4]
[ext_resource path="res://resim/screenshot1.png" type="Texture" id=5]
[ext_resource path="res://ses/528865__eponn__beep-1.wav" type="AudioStream" id=6]
[ext_resource path="res://ses/483598__raclure__wrong.wav" type="AudioStream" id=7]
[ext_resource path="res://ses/320181__dland__hint.wav" type="AudioStream" id=8]
[ext_resource path="res://font/Times Turkish Transcription.TTF" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.172549, 0.164706, 0.196078, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0117647, 0.862745, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Theme" id=6]
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=18]
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="Theme" id=19]
TextEdit/colors/background_color = Color( 0, 0, 0, 0 )
TextEdit/colors/bookmark_color = Color( 0.08, 0.49, 0.98, 1 )
TextEdit/colors/brace_mismatch_color = Color( 1, 0.2, 0.2, 1 )
TextEdit/colors/breakpoint_color = Color( 0.8, 0.8, 0.4, 0.2 )
TextEdit/colors/caret_background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/caret_color = Color( 0.88, 0.88, 0.88, 1 )
TextEdit/colors/code_folding_color = Color( 0.8, 0.8, 0.8, 0.8 )
TextEdit/colors/completion_background_color = Color( 0.17, 0.16, 0.2, 1 )
TextEdit/colors/completion_existing_color = Color( 0.87, 0.87, 0.87, 0.13 )
TextEdit/colors/completion_font_color = Color( 0.67, 0.67, 0.67, 1 )
TextEdit/colors/completion_scroll_color = Color( 1, 1, 1, 0.29 )
TextEdit/colors/completion_selected_color = Color( 0.26, 0.26, 0.27, 1 )
TextEdit/colors/current_line_color = Color( 0.25, 0.25, 0.26, 0.8 )
TextEdit/colors/executing_line_color = Color( 0.2, 0.8, 0.2, 0.4 )
TextEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
TextEdit/colors/font_color_readonly = Color( 0.88, 0.88, 0.88, 0.5 )
TextEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
TextEdit/colors/function_color = Color( 0.4, 0.64, 0.81, 1 )
TextEdit/colors/line_number_color = Color( 0.67, 0.67, 0.67, 0.4 )
TextEdit/colors/mark_color = Color( 1, 0.4, 0.4, 0.4 )
TextEdit/colors/member_variable_color = Color( 0.9, 0.31, 0.35, 1 )
TextEdit/colors/number_color = Color( 0.92, 0.58, 0.2, 1 )
TextEdit/colors/safe_line_number_color = Color( 0.67, 0.78, 0.67, 0.6 )
TextEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
TextEdit/colors/symbol_color = Color( 0.94, 0.94, 0.94, 1 )
TextEdit/colors/word_highlighted_color = Color( 0.8, 0.9, 0.9, 0.15 )
TextEdit/constants/completion_lines = 7
TextEdit/constants/completion_max_width = 50
TextEdit/constants/completion_scroll_width = 6
TextEdit/constants/line_spacing = 4
TextEdit/fonts/font = null
TextEdit/icons/fold = null
TextEdit/icons/folded = null
TextEdit/icons/space = null
TextEdit/icons/tab = null
TextEdit/styles/completion = null
TextEdit/styles/focus = null
TextEdit/styles/normal = SubResource( 18 )
TextEdit/styles/read_only = null

[sub_resource type="DynamicFont" id=17]
size = 18
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=14]
resource_name = "Doğru"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../DogruPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.945098, 0.760784, 0.0352941, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../DogruPanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=16]
resource_name = "Yanlış"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../YanlisPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.32549, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../YanlisPanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "SoruSorma"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Soru:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 30, 25 ]
}

[sub_resource type="Animation" id=13]
length = 0.001

[sub_resource type="Animation" id=10]
resource_name = "Yanlış"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Cevap:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 200, 152 ), Vector2( 205, 152 ), Vector2( 200, 152 ), Vector2( 195, 152 ), Vector2( 200, 152 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Soru:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 168, 48 ), Vector2( 173, 48 ), Vector2( 168, 48 ), Vector2( 163, 48 ), Vector2( 168, 48 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "ipucu"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ipucuYazi:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 20, 18 ]
}

[node name="Alistirma(KelimeBilme)" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 640.0
margin_bottom = 376.0

[node name="YanlisPanel" type="Panel" parent="."]
modulate = Color( 0.32549, 0, 0, 1 )
margin_right = 640.0
margin_bottom = 376.0

[node name="DogruPanel" type="Panel" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 376.0

[node name="NormalYeri" type="Camera2D" parent="."]
position = Vector2( 320, 160 )

[node name="AndroidYeri" type="Camera2D" parent="."]
position = Vector2( 320, 216 )

[node name="bos" type="LineEdit" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 640.0
margin_bottom = 376.0
editable = false
virtual_keyboard_enabled = false

[node name="SoslukKelimeYok" type="Label" parent="."]
visible = false
margin_left = 56.0
margin_top = 96.0
margin_right = 586.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 1 )
text = "Sözlükte hiç kelime yok !
   Anamenüye dönüp \" Kelime Ekle / Çıkar \" a basıp kelime ekleyebilirsin  "
align = 1
valign = 1

[node name="Soru" type="Label" parent="."]
margin_top = 48.0
margin_right = 640.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 152, 19 )
custom_fonts/font = SubResource( 2 )
text = "türkçesi ne demek ?"
align = 1
valign = 1

[node name="ipucuTema" type="Label" parent="."]
margin_left = 136.0
margin_top = 96.0
margin_right = 504.0
margin_bottom = 137.0
rect_pivot_offset = Vector2( 112, 18 )
theme = SubResource( 6 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="ipucuYazi" type="Label" parent="."]
margin_left = 144.0
margin_top = 98.0
margin_right = 448.0
margin_bottom = 135.0
theme = SubResource( 19 )
custom_fonts/font = SubResource( 17 )
align = 1
valign = 1

[node name="Cevap" type="LineEdit" parent="."]
margin_left = 208.0
margin_top = 152.0
margin_right = 360.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 3 )
align = 1
placeholder_text = "Cevap"
caret_blink = true
caret_blink_speed = 0.5

[node name="Geri" type="Button" parent="."]
margin_left = 16.0
margin_top = 280.0
margin_right = 80.0
margin_bottom = 308.0
custom_fonts/font = SubResource( 4 )
icon = ExtResource( 4 )
icon_align = 1

[node name="Enter" type="Button" parent="."]
margin_left = 368.0
margin_top = 160.0
margin_right = 432.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 4 )
icon = ExtResource( 5 )
icon_align = 1

[node name="İpucu" type="Button" parent="."]
margin_left = 456.0
margin_top = 100.0
margin_right = 497.0
margin_bottom = 133.0
custom_colors/font_color_focus = Color( 0.0117647, 0.862745, 0.0156863, 1 )
custom_colors/font_color = Color( 0.0117647, 0.862745, 0.0156863, 1 )
custom_colors/font_color_hover = Color( 0.0117647, 0.862745, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 0.0117647, 0.862745, 0.0156863, 1 )
custom_fonts/font = SubResource( 4 )
text = "İpucu"
icon_align = 1

[node name="BilmeAnimasyon" type="AnimationPlayer" parent="."]
root_node = NodePath("../SoruAnimasyon")
"anims/Doğru" = SubResource( 14 )
"anims/Yanlış" = SubResource( 16 )

[node name="SoruAnimasyon" type="AnimationPlayer" parent="."]
anims/SoruSorma = SubResource( 8 )

[node name="YanlisBilme" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 13 )
"anims/Yanlış" = SubResource( 10 )

[node name="ipucuAnimasyon" type="AnimationPlayer" parent="."]
anims/ipucu = SubResource( 12 )

[node name="Dogru" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 320, 112 )
stream = ExtResource( 6 )

[node name="Yanlis" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 320, 112 )
stream = ExtResource( 7 )

[node name="ipucu" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 320, 112 )
stream = ExtResource( 8 )

[connection signal="pressed" from="Geri" to="." method="_on_Geri_pressed"]
[connection signal="pressed" from="Enter" to="." method="_on_Enter_pressed"]
[connection signal="pressed" from="İpucu" to="." method="_on_pucu_pressed"]
